[gd_scene load_steps=32 format=2]

[ext_resource path="res://src/levels/base-level/LevelBase.gd" type="Script" id=1]
[ext_resource path="res://src/screens/shop/Shop3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/screens/menu/Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/actors/bin/Bin.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/actors/ball/starter-ball/Ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/ui/level-complete/LevelComplete.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/actors/star/Star.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/background.png" type="Texture" id=8]
[ext_resource path="res://src/ui/coins/Coins.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/screens/shop/Shop.tscn" type="PackedScene" id=10]
[ext_resource path="res://materials/wall-material.tres" type="Material" id=11]
[ext_resource path="res://materials/wall-physics-material.tres" type="PhysicsMaterial" id=12]
[ext_resource path="res://assets/pause.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Spatial/Base/Camera:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -14, 17, 26 ), Vector3( -4, 17, 26 ), Vector3( 0, 17, 26 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spatial:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=2]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Spatial/Base/Camera:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 55, 26 ), Vector3( 0, 17, 26 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Spatial/Base/Camera:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 17, 26 ), Vector3( 0, 55, 26 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Spatial/Base/Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 17, 26 ), Vector3( 0, 17, 26 ), Vector3( 0, 17, 26 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Spatial/Base/Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 16, 26 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Spatial:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="BoxShape" id=5]

[sub_resource type="CubeMesh" id=6]

[sub_resource type="PlaneMesh" id=16]

[sub_resource type="SpatialMaterial" id=17]
flags_transparent = true
albedo_color = Color( 0.0705882, 0.266667, 0.45098, 1 )
albedo_texture = ExtResource( 8 )

[sub_resource type="CubeMesh" id=7]

[sub_resource type="BoxShape" id=8]

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.317647, 0.776471, 0.733333, 1 )

[sub_resource type="SphereMesh" id=10]
material = SubResource( 9 )

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.976471, 0.439216, 0.439216, 1 )

[sub_resource type="SphereMesh" id=12]
material = SubResource( 11 )

[sub_resource type="SpatialMaterial" id=13]
albedo_color = Color( 0.929412, 0.945098, 0.498039, 1 )

[sub_resource type="SphereMesh" id=14]
material = SubResource( 13 )

[sub_resource type="PhysicsMaterial" id=15]
friction = 0.5
bounce = 0.9

[node name="LevelBase" type="Node"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/FadeIn = SubResource( 1 )
anims/GoToMenu = SubResource( 2 )
anims/GoToShop = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/RESET = SubResource( 18 )

[node name="Control" type="Control" parent="."]
margin_left = 108.702
margin_top = -4.0869
margin_right = 148.702
margin_bottom = 35.9131

[node name="Coins" parent="Control" instance=ExtResource( 9 )]
margin_left = -165.03
margin_top = -6.74166
margin_right = 118.97
margin_bottom = 71.2583
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Node" parent="."]

[node name="Pause" type="Button" parent="UI"]
modulate = Color( 1, 1, 1, 0.705882 )
margin_left = 601.684
margin_top = 12.0
margin_right = 665.684
margin_bottom = 138.0
rect_scale = Vector2( 0.9, 0.9 )
icon = ExtResource( 14 )

[node name="Shop" parent="UI" instance=ExtResource( 10 )]
visible = true

[node name="Menu" parent="UI" instance=ExtResource( 3 )]

[node name="LevelComplete" parent="UI" instance=ExtResource( 6 )]

[node name="Spatial" type="Spatial" parent="."]
process_priority = 10

[node name="Base" type="Spatial" parent="Spatial"]

[node name="Floor" type="StaticBody" parent="Spatial/Base"]
transform = Transform( 11, 0, 0, 0, 4, 0, 0, 0, 1, 0, -4, 0 )
physics_material_override = ExtResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="Spatial/Base/Floor"]
shape = SubResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="Spatial/Base/Floor"]
cast_shadow = 0
use_in_baked_light = true
mesh = SubResource( 6 )
material/0 = ExtResource( 11 )

[node name="Backgorund" type="MeshInstance" parent="Spatial/Base"]
transform = Transform( 20, 0, 0, 0, -2.18557e-06, -59.44, 0, 50, -2.5982e-06, 0, 37.6553, -6.80032 )
mesh = SubResource( 16 )
material/0 = SubResource( 17 )

[node name="WallLeft" type="StaticBody" parent="Spatial/Base"]
transform = Transform( 1, 0, 0, 0, 100, 0, 0, 0, 1, -10, 100, 0 )
physics_material_override = ExtResource( 12 )

[node name="MeshInstance" type="MeshInstance" parent="Spatial/Base/WallLeft"]
use_in_baked_light = true
mesh = SubResource( 7 )
material/0 = ExtResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="Spatial/Base/WallLeft"]
shape = SubResource( 8 )

[node name="WallRight" type="StaticBody" parent="Spatial/Base"]
transform = Transform( 1, 0, 0, 0, 100, 0, 0, 0, 1, 10, 100, 0 )
physics_material_override = ExtResource( 12 )

[node name="MeshInstance" type="MeshInstance" parent="Spatial/Base/WallRight"]
use_in_baked_light = true
mesh = SubResource( 7 )
material/0 = ExtResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="Spatial/Base/WallRight"]
shape = SubResource( 8 )

[node name="Roof" type="StaticBody" parent="Spatial/Base"]
transform = Transform( 9, 0, 0, 0, 2, 0, 0, 0, 1, 0, 37, 0 )
physics_material_override = ExtResource( 12 )

[node name="MeshInstance" type="MeshInstance" parent="Spatial/Base/Roof"]
use_in_baked_light = true
mesh = SubResource( 7 )
material/0 = ExtResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="Spatial/Base/Roof"]
shape = SubResource( 8 )

[node name="ShopRoof" type="StaticBody" parent="Spatial/Base"]
transform = Transform( 9, 0, 0, 0, 2, 0, 0, 0, 1, 0, 75, 0 )
physics_material_override = ExtResource( 12 )

[node name="MeshInstance" type="MeshInstance" parent="Spatial/Base/ShopRoof"]
use_in_baked_light = true
mesh = SubResource( 7 )
material/0 = ExtResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="Spatial/Base/ShopRoof"]
shape = SubResource( 8 )

[node name="DirectionalLight" type="DirectionalLight" parent="Spatial/Base"]
light_energy = 0.45

[node name="Shop3D" parent="Spatial/Base" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 62, 0 )

[node name="Camera" type="Camera" parent="Spatial/Base"]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16, 26 )
current = true

[node name="CPUParticlesBlue" type="CPUParticles" parent="Spatial/Base"]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -28.6212, -24 )
amount = 6
lifetime = 40.0
preprocess = 440.0
mesh = SubResource( 10 )
emission_shape = 2
emission_box_extents = Vector3( 20, 1, 1 )
flag_align_y = true
gravity = Vector3( 0, 0.1, 0 )
linear_accel = 2.0
linear_accel_random = 1.0
scale_amount = 3.0
scale_amount_random = 1.0

[node name="CPUParticlesRed" type="CPUParticles" parent="Spatial/Base"]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -28.6212, -24 )
amount = 6
lifetime = 40.0
preprocess = 440.0
mesh = SubResource( 12 )
emission_shape = 2
emission_box_extents = Vector3( 20, 1, 1 )
flag_align_y = true
gravity = Vector3( 0, 0.1, 0 )
linear_accel = 2.0
linear_accel_random = 1.0
scale_amount = 3.0
scale_amount_random = 1.0

[node name="CPUParticleYellow" type="CPUParticles" parent="Spatial/Base"]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -28.6212, -24 )
amount = 6
lifetime = 40.0
preprocess = 440.0
mesh = SubResource( 14 )
emission_shape = 2
emission_box_extents = Vector3( 20, 1, 1 )
flag_align_y = true
gravity = Vector3( 0, 0.1, 0 )
linear_accel = 2.0
linear_accel_random = 1.0
scale_amount = 3.0
scale_amount_random = 1.0

[node name="Ball" parent="Spatial" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.94765, 19.8625, 0 )
physics_material_override = SubResource( 15 )
contacts_reported = 0
contact_monitor = false

[node name="Bin" parent="Spatial" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.90741, 0, 0 )

[node name="Star1" parent="Spatial" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.18212, 19.6921, -1.21101 )

[node name="Star2" parent="Spatial" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.06394, 9.04416, 0.575264 )

[connection signal="pressed" from="UI/Pause" to="." method="_on_Pause_pressed"]
[connection signal="back" from="UI/Shop" to="." method="_on_Shop_back"]
[connection signal="next" from="UI/Shop" to="." method="_on_Shop_next"]
[connection signal="prev" from="UI/Shop" to="." method="_on_Shop_prev"]
[connection signal="select" from="UI/Shop" to="." method="_on_Shop_select"]
[connection signal="shop" from="UI/Menu" to="." method="_on_Menu_shop"]
[connection signal="menu" from="UI/LevelComplete" to="." method="_on_LevelComplete_menu"]
[connection signal="replay" from="UI/LevelComplete" to="." method="_on_LevelComplete_replay"]
[connection signal="reset_ball" from="Spatial/Ball" to="." method="_on_Ball_reset_ball"]
[connection signal="win" from="Spatial/Bin" to="." method="_on_Bin_win"]
